--- a/beautyChuMobile/src/main/webapp/view/option.html
+++ b/beautyChuMobile/src/main/webapp/view/option.html
@@ -190,9 +190,9 @@
 
 			<form id="questionform">
 
-				<label for="text-basic">회신받을 이메일 주소를 적어주세요!</label> <input
-					type="text" name="text-basic" id="text-basic" value=""> <label
-					for="text-basic">문의하실 내용을 입력해주세요</label>
+				<label for="text-basic">회신받을 이메일 주소를 적어주세요!</label> 
+				<input type="text" name="text-basic" id="text-basic" value=""> 
+				<label for="text-basic">문의하실 내용을 입력해주세요</label>
 				<textarea cols="30" rows="20" name="textarea" id="textarea"></textarea>
 				<button id=questionbtn type="submit" data-theme="a">문의하기</button>
 
@@ -215,10 +215,8 @@
 
 
 
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script
-		src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+	<script		src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script		src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
 
 
