--- a/beautyChuMobile/src/main/webapp/view/etc/hot.html
+++ b/beautyChuMobile/src/main/webapp/view/etc/hot.html
@@ -122,10 +122,10 @@ button {
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#" data-transition="slide"	class="ui-btn-active ui-state-persist">HOT</a></li>
-					<li><a href="woman.html" rel="external">WOMEN</a></li>
-					<li><a href="man.html" rel="external">MAN</a></li>
-					<li><a href="shop.html" rel="external" >SHOP</a></li>
-					<li><a href="mychu.html" rel="external">MyChu</a></li>
+					<li><a href="#">WOMEN</a></li>
+					<li><a href="#">MAN</a></li>
+					<li><a href="#" rel="external" >SHOP</a></li>
+					<li><a id=style-detail>MyChu</a></li>
 				</ul>
 			</div>
 		</div>
