--- a/beautyChuMobile/src/main/webapp/view/man.html
+++ b/beautyChuMobile/src/main/webapp/view/man.html
@@ -125,7 +125,7 @@ button {
 					<li><a href="woman.html" rel="external">WOMEN</a></li>
 					<li><a href="#" data-transition="slide"	class="ui-btn-active ui-state-persist">MAN</a></li>
 					<li><a href="shop.html" rel="external" >SHOP</a></li>
-					<li><a href="mychu" rel="external" >MyChu</a></li>
+					<li><a href="mychu.html" rel="external" >MyChu</a></li>
 				</ul>
 			</div>
 		</div>
