--- a/beautyChuMobile/src/main/webapp/view/mychu.html
+++ b/beautyChuMobile/src/main/webapp/view/mychu.html
@@ -124,7 +124,7 @@ button {
 					<li><a href="hot.html" rel="external">HOT</a></li>
 					<li><a href="woman.html" rel="external">WOMEN</a></li>
 					<li><a href="man.html" rel="external">MAN</a></li>
-					<li><a href="shop.html"  >SHOP</a></li>
+					<li><a href="shop.html" rel="external" >SHOP</a></li>
 					<li><a href="#" data-transition="slide"	class="ui-btn-active ui-state-persist">MyChu</a></li>
 				</ul>
 			</div>
