--- a/beautyChuMobile/src/main/webapp/view/shop.html
+++ b/beautyChuMobile/src/main/webapp/view/shop.html
@@ -10,13 +10,13 @@
 <link rel="stylesheet" href="../css/main.css" />
 
 <link rel="stylesheet" href="../css/idangerous.swiper.css" />
-<link rel="stylesheet"	href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<link rel="stylesheet"
+	href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <style type="text/css">
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
 * {
 	font-family: "Nanum Gothic", sans-serif;
-	/* 	border: 1px solid red;*/
 }
 
 /* 가장 큰 내용 css */
@@ -24,253 +24,60 @@
 	padding: 0px;
 	background-color: lightgray;
 }
-/* 두개의 섹션 */
-.content-section {
-	width: 47%;
-	float: left;
-	margin-left: 2%;
-}
-/* 각 스타일 div 내용 */
-.style-content {
-	margin-top: 5%;
-	margin-bottom: 2%;
-	border: 1px solid lightgray;
-	background-color: white;
-	border-radius: 3%;
-	overflow: hidden;
-}
-/* 스타일 이미지 내용 */
-.style-content img {
-	width: 100%;
-}
-
-button {
-	margin: 2%;
-}
-
-.adddiv {
-	height: 500px;
-}
-/* 제목 내용 */
-.div-section-1 {
-	margin-top: 1.5%;
-	margin-bottom: 1.5%;
-	padding-left: 4%;
-	padding-right: 4%;
-}
-
-.div-section-2 {
-	border-top: 1px solid lightgray;
-}
-
-.div-section-2 div {
-	text-align: center;
-	font-weight: bold;
-	font-size: 90%;
-}
-
-.div-title {
-	font-weight: bold;
-	font-size: 80%;
-}
-
-.div-content {
-	font-size: 70%;
-}
-
-.div-writer {
-	text-align: right;
-	font-size: 60%;
-}
 </style>
 
 
 </head>
 <body>
-	<script id="styletemplate" type="text/temp">
-<div class=style-content id={{styleNumber}}>
-	<a href="styledetail.html?styleNo={{styleNumber}}" rel="external"><img src={{mainPhoto}}></a>
-	<div class=div-section-1>
-		<div class=div-title>{{styleName}}</div>
-		<div class=div-content>{{styleIntro}}</div>
-		<div class=div-writer>{{email}}</div>
-	</div>
-	<div class='div-section-2 ui-grid-a'>
-		<div class='div-coment ui-block-a i'>
-			<div>
-				<i class="red heart icon"></i>
-			</div>
-			<div class=count-font>{{chuCount}}</div>
-		</div>
-		<div class='div-chu-count ui-block-b' id=div-chu>
-  <div>
-				<i class="write icon"></i>
-			</div>
-			<div class=count-font>{{commentCount}}</div>
-		</div>
-	</div>
-</div></script>
 
-
-	<!-- 1페이지 -->
 
 	<div data-role="page" class="page">
 		<div data-role="header" style="overflow: hidden" data-position="fixed">
 			<h1>BeautyChu~♥</h1>
-				<a href="option.html" rel="external" data-icon="gear" data-iconpos="notext" class="ui-btn-right"></a>
-				
+			<a href="option.html" rel="external" data-icon="gear"
+				data-iconpos="notext" class="ui-btn-right"></a>
+
 			<div data-role="navbar">
 				<ul>
 					<li><a href="hot.html" rel="external">HOT</a></li>
 					<li><a href="woman.html" rel="external">WOMEN</a></li>
 					<li><a href="man.html" rel="external">MAN</a></li>
-					<li><a href="#" data-transition="slide"	class="ui-btn-active ui-state-persist">SHOP</a></li>
-					<li><a href="mychu.html"rel="external">MyChu</a></li>
+					<li><a href="#" data-transition="slide"
+						class="ui-btn-active ui-state-persist">SHOP</a></li>
+					<li><a href="mychu.html" rel="external">MyChu</a></li>
 				</ul>
 			</div>
 		</div>
 		<!-- /header -->
 
-		<div data-role="content" id=content-div>
-			<div id=content-section-1 class=content-section></div>
-			<div id=content-section-2 class=content-section>
-				<label for="select-choice-a" class="select"></label> 
-				<select	name="select-choice-a" id="select-choice-a"	data-native-menu="false">
-					<option value="최신순">최신순</option>
-					<option value="인기순">인기순</option>
-				</select>
+		<div data-role="content" id=content-div >
+			<div class="map_wrap" data-enhance="false" data-role="none">
+				<div id="map"	style="width: 100%; height: 100%; position: relative; overflow: hidden;"></div>
+
+				<div id="menu_wrap" class="bg_white">
+					<div class="option">
+						<p>
+						<form onsubmit="searchPlaces(); return false;">
+							<input type="text" value="미용실" id="keyword" size="20">
+							<button type="submit">검색하기</button>
+						</form>
+					</div>
+					<hr>
+					<ul id="placesList"></ul>
+					<div id="pagination"></div>
+				</div>
 			</div>
 		</div>
 	</div>
 
-	<!-- 	<div data-role="footer">
-		<h1>footer</h1>
-	</div> -->
-	<!-- /footer -->
 
-	<script	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script	src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-	<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
-	<script type="text/javascript" src="../js/idangerous.swiper.js"></script>
-	<script type="text/javascript" src='../js/main.js'></script>
+	<script		src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script		src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+	<script type="text/javascript"	src="//apis.daum.net/maps/maps3.js?apikey=d68325ce80aa99b09337e375aa77d969&libraries=services"></script>
 
 
 
 
-	<script>
-	
-	
-
-	/******************************
-	로그인 세션 체크 코드
-	
-	1.세션에 담겨져있는 로그인 정보 여부에따라 LISTVIEW 구성 다르게 한다.
-	login 정보가 있을시 - 로그인 버튼 비활성화 로그아웃버튼 활성화 회원가입 비활성화
-	login 정보가 없을시 - 로그아웃 버튼 비활성화 로그인 버튼 활성화 회원가입 활성화
-	
-	
-	 ******************************/
-
-	$.ajax({
-		type : 'GET',
-		dataType : "json",
-		url : '../json/auth/loginUser.do',
-		success : function(data) {
-			if (data.status === 'success') {
-				console.log(data.loginUser);
-				
-				
-			} else {
-				console.log('로그인 된 사람 없음');
-				$('#list-login').show();
-				$('#list-logout').hide();
-				$('#list-join').show();
-				$('#list-change-password').hide();
-			}
-		},
-		error : function() {
-			console.log('로그회원 조회 ajax 실패');
-		}
-
-	});
-
-	
-	
-	
-	
-		var currPageNo;
-		var maxPageNo;
-
-		$(function() {
-			loadStyleList(1);
-
-			
-
-			/* 스와이프 코드 */
-			$(window).scroll(
-					function() {
-						if ($(window).scrollTop() >= $(document).height()
-								- $(window).height() - 300) {
-							loadStyleList(currPageNo);
-						}
-					})
-
-			/* 스와이프 코드 */
-
-			$("#page1").on("swipeleft", function(e) {
-				$.mobile.changePage("#page2", {
-					transition : "slide"
-				});
-			});
-
-			$("#page2").on("swiperight", function(e) {
-				$.mobile.changePage("#page1", {
-					transition : "slide",
-					reverse : true
-				});
-			});
-
-		})
-
-		function loadStyleList(pageNo) {
-			if (pageNo <= 0)
-				pageNo = 1;
-
-			$.getJSON('../json/style/list.do?pageNo=' + pageNo, function(data) {
-				console.log(data);
-				var styleList = data.styleList;
-
-				if (data.status === 'success') {
-					for (var i = 0; i < styleList.length; i++) {
-						var source = $('#styletemplate').html();
-						var template = Handlebars.compile(source);
-						var html = template(styleList[i]);
-						if ($('#content-section-1').outerHeight() <= $(
-								'#content-section-2').outerHeight()) {
-							$('#content-section-1').fadeIn().append(html);
-						} else {
-							$('#content-section-2').fadeIn().append(html);
-						}
-						$('#styletemplate').trigger('create');
-					}
-				}
-
-			});
-
-			currPageNo = ++pageNo;
-			console.log('다음페이지 : ' + currPageNo);
-
-		}
-
-		$(document).on("pagebeforeshow", ".page", function() {
-			console.log('페이지 인잇');
-		})
-		
-		/* 
-		$("#div-chu").
-		 */
-
-	</script>
 
 </body>
 </html>
