--- a/beautyChuMobile/src/main/webapp/view/mychu.html
+++ b/beautyChuMobile/src/main/webapp/view/mychu.html
@@ -4,18 +4,19 @@
 <meta charset="UTF-8">
 
 <title>jQuery Mobile Basic</title>
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0, user-scalable=no" />
+<meta name="viewport"	content="width=device-width, initial-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" href="../css/icon.css" />
 <link rel="stylesheet" href="../css/main.css" />
-
-<link rel="stylesheet" href="../css/idangerous.swiper.css" />
-<link rel="stylesheet"	href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<link rel="stylesheet"	href="../css/jquery.mobile-1.4.5.min.css" />
 <style type="text/css">
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+
+@font-face {
+	font-family: 'Nanum Gothic Bold';
+	src: url('../font/NanumGothic-ExtraBold.ttf');
+}
 
 * {
-	font-family: "Nanum Gothic", sans-serif;
+	font-family: "Nanum Gothic Bold", sans-serif;
 	/* 	border: 1px solid red;*/
 }
 
@@ -121,11 +122,11 @@ button {
 				
 			<div data-role="navbar">
 				<ul>
-					<li><a href="hot.html" rel="external">HOT</a></li>
+					<li><a href="hot.html"   rel="external">HOT</a></li>
 					<li><a href="woman.html" rel="external">WOMEN</a></li>
 					<li><a href="man.html" rel="external">MAN</a></li>
-					<li><a href="shop.html" rel="external" >SHOP</a></li>
-					<li><a href="#" data-transition="slide"	class="ui-btn-active ui-state-persist">MyChu</a></li>
+					<li><a href="shop.html" rel="external">SHOP</a></li>
+					<li><a href="#"  data-transition="slide"	class="ui-btn-active ui-state-persist">MyChu</a></li>
 				</ul>
 			</div>
 		</div>
@@ -151,8 +152,6 @@ button {
 	<script	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script	src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
-	<script type="text/javascript" src="../js/idangerous.swiper.js"></script>
-	<script type="text/javascript" src='../js/main.js'></script>
 
 
 
@@ -174,7 +173,7 @@ button {
 	$.ajax({
 		type : 'GET',
 		dataType : "json",
-		url : '../json/auth/loginUser.do',
+		url : 'http://192.168.0.36:8080/beautyChuMobile/json/auth/loginUser.do',
 		success : function(data) {
 			if (data.status === 'success') {
 				console.log(data.loginUser);
@@ -236,7 +235,7 @@ button {
 			if (pageNo <= 0)
 				pageNo = 1;
 
-			$.getJSON('../json/style/list.do?pageNo=' + pageNo, function(data) {
+			$.getJSON('http://192.168.0.36:8080/beautyChuMobile/json/style/list.do?pageNo=' + pageNo, function(data) {
 				console.log(data);
 				var styleList = data.styleList;
 
@@ -274,3 +273,6 @@ button {
 
 </body>
 </html>
+
+
+
