--- a/beautyChuMobile/src/main/webapp/view/mapdetail.html
+++ b/beautyChuMobile/src/main/webapp/view/mapdetail.html
@@ -4,10 +4,17 @@
 <meta charset="utf-8">
 <title>내 주변 샵 검색</title>
 <style type="text/css">
+
+
+@font-face {
+	font-family: 'Nanum Gothic Bold';
+	src: url('../font/NanumGothic-ExtraBold.ttf');
+}
+
 .map_wrap, .map_wrap * {
 	margin: 0;
 	padding: 0;
-	font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;
+	font-family: 'Nanum Gothic Bold', dotum, '돋움', sans-serif;
 }
 
 .map_wrap a, .map_wrap a:hover, .map_wrap a:active {
@@ -16,24 +23,24 @@
 }
 
 .map_wrap {
-	position: relative;
+	position: absolute;
 	width: 100%;
-	height: 350px;
+	height: 200px;
 	font-size: 12px;
 }
 
 #menu_wrap {
-	position: fixed;
-	top: 350px;
+	position: fixed;	
+	top: 280px;
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	margin: 10px 0 30px 10px;
+	margin: 0px 0px 0px 0px;
 	padding: 5px;
 	overflow-y: auto;
 	background: rgba(255, 255, 255, 0.7);
 	z-index: 1;
-	font-size: 120%;
+	font-size: 100%;
 	border-radius: 10px;
 }
 
@@ -49,8 +56,13 @@
 	margin: 3px 0;
 }
 
-#menu_wrap .option {
+.map_wrap .option {
 	text-align: center;
+	float: right;
+	position: relative;
+	top: -199px;
+	z-index: 100;
+	right: 2px;
 }
 
 #menu_wrap .option p {
@@ -198,18 +210,17 @@
 	<div class="map_wrap">
 		<div id="map"
 			style="width: 100%; height: 100%; position: relative; overflow: hidden;"></div>
+		<div class="option">
+			
+			<form onsubmit="searchPlaces(); return false;">
+				<input type="text" value="미용실" id="keyword" size="10">
+				<button type="submit">검색</button>
+			</form>
+			
 
+		</div>
 		<div id="menu_wrap" class="bg_white">
-			<div class="option">
-				<p>
-				<form onsubmit="searchPlaces(); return false;">
-					<input type="text" value="미용실" id="keyword" size="20">
-					<button type="submit">검색하기</button>
-				</form>
-				</p>
 
-			</div>
-			<hr>
 			<ul id="placesList"></ul>
 			<div id="pagination"></div>
 		</div>
