--- a/beautyChuMobile/src/main/webapp/view/shop.html
+++ b/beautyChuMobile/src/main/webapp/view/shop.html
@@ -8,15 +8,17 @@
 	content="width=device-width, initial-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" href="../css/icon.css" />
 <link rel="stylesheet" href="../css/main.css" />
-
-<link rel="stylesheet" href="../css/idangerous.swiper.css" />
-<link rel="stylesheet"
-	href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<link rel="stylesheet"	href="../css/jquery.mobile-1.4.5.min.css" />
 <style type="text/css">
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+
+@font-face {
+	font-family: 'Nanum Gothic Bold';
+	src: url('../font/NanumGothic-ExtraBold.ttf');
+}
 
 * {
-	font-family: "Nanum Gothic", sans-serif;
+	font-family: "Nanum Gothic Bold", sans-serif;
+	/* 	border: 1px solid red;*/
 }
 
 /* 가장 큰 내용 css */
@@ -51,32 +53,29 @@
 		<!-- /header -->
 
 		<div data-role="content" id=content-div >
-			<div class="map_wrap" data-enhance="false" data-role="none">
-				<div id="map"	style="width: 100%; height: 100%; position: relative; overflow: hidden;"></div>
 
-				<div id="menu_wrap" class="bg_white">
-					<div class="option">
-						<p>
-						<form onsubmit="searchPlaces(); return false;">
-							<input type="text" value="미용실" id="keyword" size="20">
-							<button type="submit">검색하기</button>
-						</form>
-					</div>
-					<hr>
-					<ul id="placesList"></ul>
-					<div id="pagination"></div>
-				</div>
-			</div>
+
 		</div>
 	</div>
 
 
-	<script		src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script		src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+	<script		src="../js/jquery-2.1.3.min.js"></script>
+	<script		src="../js/jquery.mobile-1.4.5.min.js"></script>
 	<script type="text/javascript"	src="//apis.daum.net/maps/maps3.js?apikey=d68325ce80aa99b09337e375aa77d969&libraries=services"></script>
 
+	<script type="text/javascript">
+	
+	$(function(){
+	
+	
+		$( "#content-div" ).load( "http://192.168.0.36:8080/beautyChuMobile/view/mapdetail.html" );
 
-
+		
+	})
+	
+	
+	
+	</script>
 
 
 </body>
