--- a/beautyChuMobile/src/main/webapp/view/woman.html
+++ b/beautyChuMobile/src/main/webapp/view/woman.html
@@ -4,19 +4,20 @@
 <meta charset="UTF-8">
 
 <title>jQuery Mobile Basic</title>
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0, user-scalable=no" />
+<meta name="viewport"	content="width=device-width, initial-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" href="../css/icon.css" />
 <link rel="stylesheet" href="../css/main.css" />
-
-<link rel="stylesheet" href="../css/idangerous.swiper.css" />
-<link rel="stylesheet"	href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<link rel="stylesheet" href="../css/jquery.mobile-1.4.5.min.css" />
 <style type="text/css">
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+
+
+@font-face {
+	font-family: 'Nanum Gothic Bold';
+	src: url('../font/NanumGothic-ExtraBold.ttf');
+}
 
 * {
-	font-family: "Nanum Gothic", sans-serif;
-	/* 	border: 1px solid red;*/
+	font-family: "Nanum Gothic Bold", sans-serif;
 }
 
 /* 가장 큰 내용 css */
@@ -24,7 +25,7 @@
 	padding: 0px;
 	background-color: lightgray;
 }
-/* 두개의 섹션 */
+/* 두개의 섹션 */``
 .content-section {
 	width: 47%;
 	float: left;
@@ -117,11 +118,12 @@ button {
 	<div data-role="page" class="page">
 		<div data-role="header" style="overflow: hidden" data-position="fixed">
 			<h1>BeautyChu~♥</h1>
-				<a href="option.html" rel="external" data-icon="gear" data-iconpos="notext" class="ui-btn-right"></a>
-				
+			<a href="option.html" rel="external" data-icon="gear"
+				data-iconpos="notext" class="ui-btn-right"></a>
+
 			<div data-role="navbar">
 				<ul>
-					<li><a href="hot.html" rel="external">HOT</a></li>
+							<li><a href="hot.html" rel="external">HOT</a></li>
 					<li><a href="#" data-transition="slide"	class="ui-btn-active ui-state-persist">WOMEN</a></li>
 					<li><a href="man.html" rel="external">MAN</a></li>
 					<li><a href="shop.html" rel="external">SHOP</a></li>
@@ -134,8 +136,9 @@ button {
 		<div data-role="content" id=content-div>
 			<div id=content-section-1 class=content-section></div>
 			<div id=content-section-2 class=content-section>
-				<label for="select-choice-a" class="select"></label> 
-				<select	name="select-choice-a" id="select-choice-a"	data-native-menu="false">
+				<label for="select-choice-a" class="select"></label> <select
+					name="select-choice-a" id="select-choice-a"
+					data-native-menu="false">
 					<option value="최신순">최신순</option>
 					<option value="인기순">인기순</option>
 				</select>
@@ -148,63 +151,51 @@ button {
 	</div> -->
 	<!-- /footer -->
 
-	<script	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script	src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-	<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
-	<script type="text/javascript" src="../js/idangerous.swiper.js"></script>
-	<script type="text/javascript" src='../js/main.js'></script>
+	<script	type="text/javascript"	src="../js/jquery-2.1.3.min.js"></script>
+	<script	type="text/javascript"	src="../js/jquery.mobile-1.4.5.min.js"></script>
+	<script type="text/javascript" src="../js/handlebars-v2.0.0.js"></script>
+	<script type="text/javascript" src="../js/main.js"></script>
 
 
 
 
 	<script>
-	
-	
+		/*
+		로그인 세션 체크 코드
+		
+		1.세션에 담겨져있는 로그인 정보 여부에따라 LISTVIEW 구성 다르게 한다.
+		login 정보가 있을시 - 로그인 버튼 비활성화 로그아웃버튼 활성화 회원가입 비활성화
+		login 정보가 없을시 - 로그아웃 버튼 비활성화 로그인 버튼 활성화 회원가입 활성화
+		
+	*/
 
-	/******************************
-	로그인 세션 체크 코드
-	
-	1.세션에 담겨져있는 로그인 정보 여부에따라 LISTVIEW 구성 다르게 한다.
-	login 정보가 있을시 - 로그인 버튼 비활성화 로그아웃버튼 활성화 회원가입 비활성화
-	login 정보가 없을시 - 로그아웃 버튼 비활성화 로그인 버튼 활성화 회원가입 활성화
-	
-	
-	 ******************************/
+		$.ajax({
+			type : 'GET',
+			dataType : "json",
+			url : '../json/auth/loginUser.do',
+			success : function(data) {
+				if (data.status === 'success') {
+					console.log(data.loginUser);
 
-	$.ajax({
-		type : 'GET',
-		dataType : "json",
-		url : '../json/auth/loginUser.do',
-		success : function(data) {
-			if (data.status === 'success') {
-				console.log(data.loginUser);
-				
-				
-			} else {
-				console.log('로그인 된 사람 없음');
-				$('#list-login').show();
-				$('#list-logout').hide();
-				$('#list-join').show();
-				$('#list-change-password').hide();
+				} else {
+					console.log('로그인 된 사람 없음');
+					$('#list-login').show();
+					$('#list-logout').hide();
+					$('#list-join').show();
+					$('#list-change-password').hide();
+				}
+			},
+			error : function() {
+				console.log('로그회원 조회 ajax 실패');
 			}
-		},
-		error : function() {
-			console.log('로그회원 조회 ajax 실패');
-		}
 
-	});
+		});
 
-	
-	
-	
-	
 		var currPageNo;
 		var maxPageNo;
 
 		$(function() {
 			loadStyleList(1);
-
-			
 
 			/* 스와이프 코드 */
 			$(window).scroll(
@@ -236,7 +227,7 @@ button {
 			if (pageNo <= 0)
 				pageNo = 1;
 
-			$.getJSON('../json/style/list.do?pageNo=' + pageNo, function(data) {
+			$.getJSON('http://192.168.0.36:8080/beautyChuMobile/json/style/list.do?pageNo=' + pageNo, function(data) {
 				console.log(data);
 				var styleList = data.styleList;
 
@@ -265,12 +256,15 @@ button {
 		$(document).on("pagebeforeshow", ".page", function() {
 			console.log('페이지 인잇');
 		})
-		
+
 		/* 
 		$("#div-chu").
 		 */
-
 	</script>
 
 </body>
 </html>
+
+
+
+
