..헤헤 거의 완성

--- a/beautyChuMobile/src/main/webapp/view/hot.html
+++ b/beautyChuMobile/src/main/webapp/view/hot.html
@@ -126,7 +126,7 @@ button {
 					<li><a href="#" data-transition="slide"	class="ui-btn-active ui-state-persist">HOT</a></li>
 					<li><a href="woman.html" rel="external">WOMEN</a></li>
 					<li><a href="man.html" rel="external">MAN</a></li>
-					<li><a href="shop.html" rel="external">SHOP</a></li>
+					<li><a href="http://192.168.0.36:8080/beautyChuMobile/view/shop.html" rel="external">SHOP</a></li>
 					<li><a href="mychu.html" rel="external">MyChu</a></li>
 				</ul>
 			</div>
@@ -243,7 +243,6 @@ button {
 						$('#styletemplate').trigger('create');
 					}
 				}
-
 			});
 
 			currPageNo = ++pageNo;
