--- a/beautyChuMobile/src/main/webapp/view/mapdetail.html
+++ b/beautyChuMobile/src/main/webapp/view/mapdetail.html
@@ -5,11 +5,11 @@
 <title>내 주변 샵 검색</title>
 <style type="text/css">
 
-
 @font-face {
 	font-family: 'Nanum Gothic Bold';
 	src: url('../font/NanumGothic-ExtraBold.ttf');
 }
+
 
 .map_wrap, .map_wrap * {
 	margin: 0;
@@ -30,7 +30,7 @@
 }
 
 #menu_wrap {
-	position: fixed;	
+	position: fixed;
 	top: 280px;
 	left: 0;
 	bottom: 0;
@@ -201,6 +201,15 @@
 	cursor: default;
 	color: #777;
 }
+
+#geolocationbtn {
+	text-align: center;
+	float: left;
+	position: relative;
+	top: -199px;
+	z-index: 100;
+	right: -2px;
+}
 </style>
 </head>
 
@@ -211,14 +220,14 @@
 		<div id="map"
 			style="width: 100%; height: 100%; position: relative; overflow: hidden;"></div>
 		<div class="option">
-			
-			<form onsubmit="searchPlaces(); return false;">
-				<input type="text" value="미용실" id="keyword" size="10">
-				<button type="submit">검색</button>
-			</form>
-			
 
+			<form onsubmit="searchPlaces(); return false;">
+				<input type="text" value="미용실" id="keyword"
+					size="10">
+				<button id='searchbtn' type="submit">검색</button>
+			</form>
 		</div>
+		<button id='geolocationbtn'>내위치</button>
 		<div id="menu_wrap" class="bg_white">
 
 			<ul id="placesList"></ul>
@@ -228,8 +237,12 @@
 
 
 
+	<script	type="text/javascript"	src="../js/jquery-2.1.3.min.js"></script>
+
 
 	<script>
+	
+
 		// 마커를 담을 배열입니다
 		var markers = [];
 
@@ -310,8 +323,9 @@
 				// 마커를 생성하고 지도에 표시합니다
 				var placePosition = new daum.maps.LatLng(places[i].latitude,
 						places[i].longitude), marker = addMarker(placePosition,
-						i), itemEl = getListItem(i, places[i], marker); // 검색 결과 항목 Element를 생성합니다
+						i), itemEl = getListItem(i, places[i], marker);
 
+				// 검색 결과 항목 Element를 생성합니다
 				// 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
 				// LatLngBounds 객체에 좌표를 추가합니다
 				bounds.extend(placePosition);
@@ -450,6 +464,42 @@
 				el.removeChild(el.lastChild);
 			}
 		}
+
+			function onDeviceReady() {
+				console.log('onDeviceReady진입');
+				navigator.geolocation.getCurrentPosition(onSuccess, onError);
+			}
+
+			function onSuccess(position) {
+				console.log('디바이스 데이터 가져오기 성공!');
+
+				var geocoder = new daum.maps.services.Geocoder();
+
+				var coord = new daum.maps.LatLng(position.coords.latitude,position.coords.longitude);
+				console.log(position.coords.latitude);
+				console.log(position.coords.longitude);
+
+				var callback = function(status, result) {
+					if (status === daum.maps.services.Status.OK) {
+						console.log(result[0].fullName);
+ 						$('#keyword').val(result[0].fullName + ' 미용실');
+						$('#searchbtn').click(); 
+						}
+				};
+				geocoder.coord2addr(coord, callback);
+			}
+			
+			function onError(error) {
+				alert('code: ' + error.code + '\n' + 'message: ' + error.message	+ '\n');
+			}
+		
+		
+	 		$('#geolocationbtn').on('click',function(){
+	 			event.stopPropagation();
+	 			document.addEventListener("deviceready", onDeviceReady, false);
+	 		})
+
+		
 	</script>
 
 
