--- a/beautyChuMobile/src/main/webapp/view/shop.html
+++ b/beautyChuMobile/src/main/webapp/view/shop.html
@@ -27,7 +27,10 @@
 	background-color: lightgray;
 }
 
-
+li img{
+	width: 100%;
+	height: 100%;
+}
 
 </style>
 
@@ -44,12 +47,12 @@
 
 			<div data-role="navbar">
 				<ul>
-					<li><a href="hot.html" rel="external">HOT</a></li>
-					<li><a href="woman.html" rel="external">WOMEN</a></li>
-					<li><a href="man.html" rel="external">MAN</a></li>
+					<li><a href="hot.html" rel="external"><img src="../img/menu1.png"></a></li>
+					<li><a href="woman.html" rel="external"><img src="../img/menu2.png"></a></li>
+					<li><a href="man.html" rel="external"><img src="../img/menu3.png"></a></li>
 					<li><a href="#" data-transition="slide"
-						class="ui-btn-active ui-state-persist">SHOP</a></li>
-					<li><a href="mychu.html" rel="external">MyChu</a></li>
+						class="ui-btn-active ui-state-persist"><img src="../img/menu4.png"></a></li>
+					<li><a href="mychu.html" rel="external"><img src="../img/menu5.png"></a></li>
 				</ul>
 			</div>
 		</div>
