--- a/beautyChuMobile/src/main/webapp/view/hot.html
+++ b/beautyChuMobile/src/main/webapp/view/hot.html
@@ -84,10 +84,12 @@ button {
 	font-size: 60%;
 }
 
-li img{
-	width: 100%;
-	height: 100%;
-}
+    li img{
+    width: 100%;
+    height: 100%;
+    }
+
+
 </style>
 
 
@@ -119,6 +121,7 @@ li img{
 
 
 	<!-- 1페이지 -->
+
 	<div data-role="page" class="page">
 		<div data-role="header" style="overflow: hidden" data-position="fixed">
 			<h1>BeautyChu~♥</h1>
@@ -127,15 +130,21 @@ li img{
 
 			<div data-role="navbar">
 				<ul>
-					<li><a href="#" data-transition="slide"	class="ui-btn-active ui-state-persist"><img src="../img/menu1.png"></a></li>
-					<li><a href="woman.html" rel="external"><img src="../img/menu2.png"></a></li>
-					<li><a href="man.html" rel="external"><img src="../img/menu3.png"></a></li>
-					<li><a href="http://192.168.0.36:8080/beautyChuMobile/view/shop.html" rel="external"><img src="../img/menu4.png"></a></li>
-					<li><a href="mychu.html" rel="external"><img src="../img/menu5.png"></a></li>
+                    <li><a href="#" data-transition="slide"	class="ui-btn-active ui-state-persist"><img src="../img/menu1.png"></a></li>
+                    <li><a href="woman.html" rel="external"><img src="../img/menu2.png"></a></li>
+                    <li><a href="man.html" rel="external"><img src="../img/menu3.png"></a></li>
+                    <li><a href="http://192.168.0.172:8080/beautyChuMobile/view/shop.html" rel="external"><img src="../img/menu4.png"></a></li>
+                    <li><a href="mychu.html" rel="external"><img src="../img/menu5.png"></a></li>
+				<!--	<li><a href="#" data-transition="slide"	class="ui-btn-active ui-state-persist">HOT</a></li>
+					<li><a href="woman.html" rel="external">WOMEN</a></li>
+					<li><a href="man.html" rel="external">MAN</a></li>
+					<li><a href="http://192.168.0.36:8080/beautyChuMobile/view/shop.html" rel="external">SHOP</a></li>
+					<li><a href="mychu.html" rel="external">MyChu</a></li>-->
 				</ul>
 			</div>
 		</div>
 		<!-- /header -->
+
 		<div data-role="content" id=content-div>
 			<div id=content-section-1 class=content-section></div>
 			<div id=content-section-2 class=content-section>
