--- a/beautyChuMobile/src/main/webapp/view/man.html
+++ b/beautyChuMobile/src/main/webapp/view/man.html
@@ -83,6 +83,12 @@ button {
 	text-align: right;
 	font-size: 60%;
 }
+
+    li img{
+    width: 100%;
+    height: 100%;
+    }
+
 </style>
 
 
@@ -123,12 +129,12 @@ button {
 
 			<div data-role="navbar">
 				<ul>
-					<li><a href="hot.html" rel="external">HOT</a></li>
-					<li><a href="woman.html" rel="external">WOMEN</a></li>
+					<li><a href="hot.html" rel="external"><img src="../img/menu1.png"></a></li>
+					<li><a href="woman.html" rel="external"><img src="../img/menu2.png"></a></li>
 					<li><a href="#" data-transition="slide"
-						class="ui-btn-active ui-state-persist">MAN</a></li>
-					<li><a href="shop.html" rel="external">SHOP</a></li>
-					<li><a href="mychu.html" rel="external">MyChu</a></li>
+						class="ui-btn-active ui-state-persist"><img src="../img/menu3.png"></a></li>
+					<li><a href="shop.html" rel="external"><img src="../img/menu4.png"></a></li>
+					<li><a href="mychu.html" rel="external"><img src="../img/menu5.png"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -172,7 +178,7 @@ button {
 		$.ajax({
 			type : 'GET',
 			dataType : "json",
-			url : 'http://192.168.0.36:8080/beautyChuMobile/json/auth/loginUser.do',
+			url : 'http://192.168.0.172:8080/beautyChuMobile/json/auth/loginUser.do',
 			success : function(data) {
 				if (data.status === 'success') {
 					console.log(data.loginUser);
@@ -227,7 +233,7 @@ button {
 			if (pageNo <= 0)
 				pageNo = 1;
 
-			$.getJSON('http://192.168.0.36:8080/beautyChuMobile/json/style/list.do?pageNo=' + pageNo, function(data) {
+			$.getJSON('http://192.168.0.172:8080/beautyChuMobile/json/style/list.do?pageNo=' + pageNo, function(data) {
 				console.log(data);
 				var styleList = data.styleList;
 
