--- a/beautyChuMobile/src/main/webapp/view/mychu.html
+++ b/beautyChuMobile/src/main/webapp/view/mychu.html
@@ -83,6 +83,12 @@ button {
 	text-align: right;
 	font-size: 60%;
 }
+
+    li img{
+    width: 100%;
+    height: 100%;
+    }
+
 </style>
 
 
@@ -122,11 +128,11 @@ button {
 				
 			<div data-role="navbar">
 				<ul>
-					<li><a href="hot.html"   rel="external">HOT</a></li>
-					<li><a href="woman.html" rel="external">WOMEN</a></li>
-					<li><a href="man.html" rel="external">MAN</a></li>
-					<li><a href="shop.html" rel="external">SHOP</a></li>
-					<li><a href="#"  data-transition="slide"	class="ui-btn-active ui-state-persist">MyChu</a></li>
+					<li><a href="hot.html"   rel="external"><img src="../img/menu1.png"></a></li>
+					<li><a href="woman.html" rel="external"><img src="../img/menu2.png"></a></li>
+					<li><a href="man.html" rel="external"><img src="../img/menu3.png"></a></li>
+					<li><a href="shop.html" rel="external"><img src="../img/menu4.png"></a></li>
+					<li><a href="#"  data-transition="slide"	class="ui-btn-active ui-state-persist"><img src="../img/menu5.png"></a></li>
 				</ul>
 			</div>
 		</div>
