--- a/beautyChuMobile/src/main/webapp/view/option.html
+++ b/beautyChuMobile/src/main/webapp/view/option.html
@@ -7,10 +7,8 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" href="../css/icon.css" />
-<link rel="stylesheet"	href="../css/jquery.mobile-1.4.5.min.css" />
+<link rel="stylesheet" href="../css/jquery.mobile-1.4.5.min.css" />
 <style type="text/css">
-
-
 @font-face {
 	font-family: 'Nanum Gothic Bold';
 	src: url('../font/NanumGothic-ExtraBold.ttf');
@@ -19,14 +17,13 @@
 * {
 	font-family: "Nanum Gothic Bold", sans-serif;
 }
-
 </style>
 
 
 
 <script id="my-info-template" type="text/temp">
 			<li>
-				<a href="#"><img src="../fileupload/1.png"  />
+				<a href="#"><img src="../fileupload/myphoto.png"  />
 					<h3>{{name}}</h3>
 					<p>{{email}}</p>
 				</a>
@@ -86,7 +83,14 @@
 			<h1>알림설정</h1>
 		</div>
 		<div data-role="content">
-			<p>아직 미구현입니다. ㅠㅠ</p>
+			<ul data-role="listview">
+				<li><a href="#"> <img src="../fileupload/shop3.jpg"
+						title="sample" />
+						<h3>라뷰티코아 강남점</h3>
+						<p>쿠폰이 7일 남았습니다.</p>
+						<p>[2031-2931-2312]</p>
+				</a></li>
+			</ul>
 		</div>
 	</div>
 
@@ -158,7 +162,7 @@
 		</div>
 		<!-- /header -->
 		<div role="main" class="ui-content">
-			<label>&nbsp;</label> <label for="txt-email">Email을 입력해주세요</label> <input
+			 <label for="txt-email">Email을 입력해주세요</label> <input
 				type="text" name="txt-email" id="join-email" value=""> <label
 				for="txt-last-name">닉네임 정해주세요</label> <input type="text"
 				name="txt-last-name" id="join-name" value=""> <label
@@ -170,7 +174,8 @@
 			<a href="#dlg-sign-up-sent" data-rel="popup" data-transition="pop"
 				data-position-to="window" id="join-submit"
 				class="ui-state-disabled ui-btn ui-btn-a ui-corner-all mc-top-margin-1-5">완료!</a>
-			<div data-role="popup" id="dlg-sign-up-sent" data-dismissible="false"		style="max-width: 400px;">
+			<div data-role="popup" id="dlg-sign-up-sent" data-dismissible="false"
+				style="max-width: 400px;">
 				<div data-role="header">
 					<h1>축하합니다</h1>
 				</div>
@@ -369,20 +374,24 @@
 			
 			1. 세션에서 삭제.
 			 ******************************/
-			$('#list-logout').on('click', function() {
+			$('#list-logout')
+					.on(
+							'click',
+							function() {
 
-				$.ajax({
-					dataType : "json",
-					url : 'http://192.168.0.36:8080/beautyChuMobile/json/auth/logout.do',
-					success : function() {
-						console.log('로그아웃 되었습니다.');
-						location.href = 'option.html';
-					},
-					error : function() {
-						console.log('로그아웃 ajax 실패 ');
-					}
-				});
-			});
+								$
+										.ajax({
+											dataType : "json",
+											url : 'http://192.168.0.172:8080/beautyChuMobile/json/auth/logout.do',
+											success : function() {
+												console.log('로그아웃 되었습니다.');
+												location.href = 'option.html';
+											},
+											error : function() {
+												console.log('로그아웃 ajax 실패 ');
+											}
+										});
+							});
 
 			/******************************
 			회원가입 체크 코드 
@@ -403,14 +412,18 @@
 								var yunregex = /^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/;
 								if (yunregex.test(yunemail)) {
 									console.log('정상 진입');
-									$.get("http://192.168.0.128:55555/id", {
+									$.get("http://192.168.0.138:55555/id", {
 										id : $('#join-email').val()
 									}, function(data) {
 										if (data.result === 'yes') {
-											$('#check-noti').html('사용가능한 아이디 입니다.').css("color", "blue");
+											$('#check-noti').html(
+													'사용가능한 아이디 입니다.').css(
+													"color", "blue");
 											joinpass = 1;
 										} else if (data.result === 'no') {
-											$('#check-noti').html('중복된 아이디가 있습니다.').css("color", "red");
+											$('#check-noti').html(
+													'중복된 아이디가 있습니다.').css(
+													"color", "red");
 											joinpass = 0;
 										}
 									})
@@ -459,29 +472,35 @@
 						}
 					});
 
-			$('#join-submit').on('click', function() {
-				$.ajax({
-					type : 'post',
-					dataType : "json",
-					url : 'http://192.168.0.36:8080/beautyChuMobile/json/auth/join.do',
-					data : {
-						email : $('#join-email').val(),
-						name : $('#join-name').val(),
-						password : $('#join-password').val()
-					},
-					success : function(data) {
-						$('#join-email').val('');
-						$('#join-name').val('');
-						$('#join-password').val('');
-						$('#join-password-confirm').val('');
-						$('#check-noti').html('&nbsp;');
+			$('#join-submit')
+					.on(
+							'click',
+							function() {
+								$
+										.ajax({
+											type : 'post',
+											dataType : "json",
+											url : 'http://192.168.0.172:8080/beautyChuMobile/json/auth/join.do',
+											data : {
+												email : $('#join-email').val(),
+												name : $('#join-name').val(),
+												password : $('#join-password')
+														.val()
+											},
+											success : function(data) {
+												$('#join-email').val('');
+												$('#join-name').val('');
+												$('#join-password').val('');
+												$('#join-password-confirm')
+														.val('');
+												$('#check-noti').html('&nbsp;');
 
-					},
-					error : function() {
-						console.log('회원가입 ajax 실패');
-					}
-				});
-			});
+											},
+											error : function() {
+												console.log('회원가입 ajax 실패');
+											}
+										});
+							});
 		});
 	</script>
 </body>
